--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,4 +16,4 @@ jobs:
       - run: npm test # Make sure tests pass before pushing to npm
       - uses: JS-DevTools/npm-publish@v1 # Push to npm if version has changed
         with:
-          token: ${{ secrets.CHRIS_NPM_TOKEN }}
+          token: ${{ secrets.NPM_TOKEN }}
